@@ -1,3 +1,7 @@
+Thu Jul 18 15:48:29 2002  Steve Huston  <shuston@riverace.com>
+
+        * ace/Future.h: Doxygenation improvements.
+
 Thu Jul 18 08:39:08 2002  Chad Elliott  <elliott_c@ociweb.com>
 
         * bin/MakeProjectCreator/README:
